--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
-  flutter_bloc:
-  bloc:
-  shared_preferences:
-  carousel_slider: ^1.3.0
-  graphql_flutter:
-  http:
-  url_launcher:
-  shimmer:
+  shared_preferences: 2.0.5
+  carousel_slider: 3.0.0
+  graphql_flutter: 5.0.0-nullsafety.2
+  http: 0.13.1
+  url_launcher: 6.0.3
+  shimmer: 2.0.0
+  provider: 5.0.0
 
 dev_dependencies:
   flutter_test:
