--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
   shared_preferences: 2.0.5
-  carousel_slider: 3.0.0
+  carousel_slider: 4.0.0
   graphql_flutter: 5.0.0-nullsafety.2
   http: 0.13.1
   url_launcher: 6.0.3
